java 5'ify